@@ -43,13 +43,4 @@
 -(void)renderScreenShot;
 @end
 
-@interface RenderTextureIssue1358 : RenderTextureTest
-{
-	CCMotionStreak *_streak;
-	CCSprite *_ship;
-	CGPoint _center;
-	CGFloat _radius;
-	CGFloat _angle;
-}
-@end
 
